# apps/api/src/app/release/use-cases/redeploy-app/redeploy-app.repository.ts
@@ -1,0 +1,26 @@
+import { Injectable } from '@nestjs/common'
+import { eq } from 'drizzle-orm'
+import { type App, appTable } from '#src/app/app-management/entities/app.table.js'
+import { type Release, releaseTable } from '#src/app/release/entities/release.table.js'
+import type { ReleaseUuid } from '#src/app/release/entities/release.uuid.js'
+import type { DeployStatus } from '#src/app/release/enums/deploy-status.enum.js'
+import type { Database } from '#src/modules/database/drizzle.factory.js'
+import { InjectDatabase } from '#src/modules/database/inject-database.decorator.js'
+
+@Injectable()
+export class RedeployAppRepository {
+  constructor(@InjectDatabase() private readonly db: Database) {}
+
+  async findAppBySlug(slug: string): Promise<App | undefined> {
+    const [app] = await this.db.select().from(appTable).where(eq(appTable.slug, slug)).limit(1)
+    return app
+  }
+
+  async createRelease(release: Release): Promise<void> {
+    await this.db.insert(releaseTable).values(release)
+  }
+
+  async setReleaseDeployStatus(uuid: ReleaseUuid, deployStatus: DeployStatus): Promise<void> {
+    await this.db.update(releaseTable).set({ deployStatus }).where(eq(releaseTable.uuid, uuid))
+  }
+}
